# albert

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Build.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.ubuntu1604  Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  Doxyfile  INSTALL.md  ISSUE_TEMPLATE.md  LICENSE.ALBERT  LICENSE.md  PR peekaboo  README.md  Rockerfile  TODO  class.uxf  classdiagram.uxf  disttool  flow.uxf  global_cmake_settings.txt  justfile  metatool  metatool.py  resources.qrc
application/: CMakeLists.txt  main.cpp
lib/albertcore/: CMakeLists.txt  resources.qrc
lib/albertcore/include/: core_globals.h
lib/globalshortcut/: CMakeLists.txt
lib/globalshortcut/src/: hotkeymanager.cpp  hotkeymanager_x11.cpp  hotkeymanager_x11.h
lib/xdg/: CMakeLists.txt
lib/xdg/src/: iconlookup.cpp  themefileparser.cpp  themefileparser.h
plugins/: CMakeLists.txt  create_plugin.sh
plugins/applauncher/: CMakeLists.txt
plugins/applauncher/src/: applauncher.cpp  applauncher.h  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  metadata.json
plugins/applications/: CMakeLists.txt  configwidget.ui  metadata.json
plugins/applications/src/: app.h  application.cpp  application.h  configwidget.cpp  configwidget.h  configwidget.ui  desktopaction.cpp  desktopaction.h  extension.cpp  extension.h  indexer.cpp  indexer.h  item.cpp  item.h  metadata.json
plugins/bookmarkindex/: bookmarkitem.cpp
plugins/calculator/: CMakeLists.txt  calculator.cpp  calculator.qrc  calculatorwidget.cpp  calculatorwidget.h  configwidget.ui  metadata.json
plugins/calculator/src/: configwidget.cpp  configwidget.h  extension.cpp  extension.h
plugins/chromebookmarks/: CMakeLists.txt
plugins/chromebookmarks/src/: bookmark.cpp  bookmark.h  chromebookmarks.qrc  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  indexer.cpp  item.cpp  item.h  metadata.json
plugins/debug/: CMakeLists.txt  debug.qrc  metadata.json
plugins/debug/src/: configwidget.cpp  extension.cpp  extension.h
plugins/externalextensions/: CMakeLists.txt  configwidget.ui
plugins/externalextensions/src/: configwidget.h  extension.cpp  externalextension.cpp  externalextension.h  externalextensionmodel.h
plugins/fileindex/: fileindex.h  fileindexbuilder.cpp  fileindexwidget.h  fileitem.cpp  fileitem.h
plugins/files/: CMakeLists.txt
plugins/files/forms/: configwidget.ui  mimetypedialog.ui
plugins/files/src/: actions.cpp  actions.h  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  file.cpp  file.h  fileactions.cpp  fileactions.h  fileindex.cpp  fileindex.h  fileitem.cpp  fileitem.h  indexer.cpp  indexer.h  indexfile.cpp  indexfile.h  indextreenode.cpp  indextreenode.h  item.cpp  item.h  metadata.json  mimetypechooser.cpp  mimetypechooser.h  mimetypechooser.ui  mimetypedialog.cpp  mimetypedialog.h  mimetypedialog.ui  scanworker.cpp  scanworker.h  standardfile.cpp  standardfile.h
plugins/files/test/: CMakeLists.txt  fileindextest.h
plugins/firefoxbookmarks/: CMakeLists.txt  configwidget.ui
plugins/firefoxbookmarks/src/: configwidget.h  extension.cpp  extension.h
plugins/mpris/: mpris.qrc
plugins/mpris/src/: configwidget.cpp  extension.cpp  extension.h  item.cpp  item.h  player.h
plugins/qmlboxmodel/: CMakeLists.txt  metadata.json  qmlboxmodel.qrc
plugins/qmlboxmodel/forms/: configwidget.ui
plugins/qmlboxmodel/src/: colordialog.hpp  configwidget.cpp  configwidget.h  frontendplugin.cpp  frontendplugin.h  mainwindow.cpp  mainwindow.h  propertyeditor.cpp  propertyeditor.h
plugins/ssh/: configwidget.ui  ssh.qrc
plugins/ssh/src/: extension.cpp  extension.h
plugins/system/: CMakeLists.txt  configwidget.ui  metadata.json
plugins/system/src/: configwidget.cpp  extension.cpp  extension.h
plugins/templateExtension/: CMakeLists.txt
plugins/templateExtension/src/: configwidget.cpp  extension.cpp  extension.h  item.cpp  item.h  metadata.json
plugins/terminal/: configwidget.ui  terminal.qrc
plugins/terminal/src/: configwidget.cpp  extension.cpp  extension.h
plugins/virtualbox/: CMakeLists.txt  configwidget.ui
plugins/virtualbox/src/: configwidget.cpp  configwidget.h  extension.cpp  extension.h  vm.cpp  vm.h  vmitem.cpp  vmitem.h
plugins/websearch/: CMakeLists.txt  websearch.cpp  websearch.qrc  websearchwidget.ui
plugins/websearch/src/: configwidget.cpp  configwidget.h  configwidget.ui  enginesmodel.cpp  extension.cpp  extension.h  item.cpp  item.h  metadata.json  searchengine.cpp  searchengine.h  searchengineeditor.cpp  websearch.qrc
plugins/widgetboxmodel/: CMakeLists.txt  metadata.json
plugins/widgetboxmodel/forms/: configwidget.ui
plugins/widgetboxmodel/share/: ArcTemplate.qss  ArcTemplate.sh  SpotlightTemplate.qss  SpotlightTemplate.sh  StandardThemeTemplate.qss  StandardThemeTemplate.sh
plugins/widgetboxmodel/src/: actionlist.cpp  actionlist.h  configwidget.cpp  configwidget.h  frontendplugin.cpp  frontendwidget.cpp  frontendwidget.h  resizinglist.cpp  resizinglist.h  resultslist.cpp  resultslist.h  settingsbutton.cpp  settingsbutton.h
src/application/: CMakeLists.txt  albertapp.cpp  albertapp.h  main.cpp  queryhandler.cpp  queryhandler.h  resources.qrc
src/application/hotkey/: hotkeymanager.cpp  hotkeymanager.h  hotkeymanager_p.h  hotkeymanager_x11.cpp
src/application/mainwidget/: inputline.cpp  inputline.h  itemdelegate.h  mainwidget.cpp  mainwidget.h  proposallist.cpp  proposallist.h  settingsbutton.h
src/application/mainwindow/: actiondelegate.hpp  actionlist.cpp  actionlist.h  history.cpp  history.h  history.hpp  inputline.cpp  itemdelegate.cpp  itemdelegate.h  itemdelegate.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proposallist.cpp  proposallist.h  resizinglist.cpp  resizinglist.h  settingsbutton.cpp  settingsbutton.h
src/application/pluginsystem/: abstractaction.h  abstractextension.h  abstractextensionloader.h  abstractitem.h  abstractobjects.hpp  action.h  iitem.h  (+27 more)
src/plugins/: CMakeLists.txt  create_plugin.py
(+1688 files in other folders)
